syntax = "proto3";
package artery.earning.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "artery/earning/v1beta1/types.proto";

option go_package = "github.com/arterynetwork/artr/x/earning/types";

service Msg {
  rpc Set(MsgSet) returns (MsgSetResponse);
  rpc SetMultiple(MsgSetMultiple) returns (MsgSetMultipleResponse);
}

message MsgSet {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  Earner earner = 1 [
    (gogoproto.nullable)   = false
  ];

  string signer = 2;
}

message MsgSetResponse {}

message MsgSetMultiple {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  repeated Earner earners = 1 [
    (gogoproto.nullable)   = false
  ];

  string signer = 2;
}

message MsgSetMultipleResponse {}
